--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         <h2>2004-2006</br>Диплом магистра техники и технологии ВМА 0044173 по направлению «Электроэнергетика»</h2>
         <img src="2004-2006.jpg" alt="диплом магистра" width="50%">
         <h2>2006</br>Сертификат</br>«Проектирование, эксплуатация и монтаж распределительных сетей 6-35 и 0,4кВ, их защита и автоматизация»</h2>
+        <img src="2006.jpg" alt="диплом магистра" width="50%">
         <h2>2007</br>Свидетельство</br>«Электрические сети и электрооборудование (особенности проектирования различных зданий, в том числе интеллектуальных)»</h2>
+        <img src="2007.jpg" alt="диплом магистра" width="50%">
         <h2>2013</br>Сертификат</br>курс «AutoCAD»</h2>
+        <img src="2013.jpg" alt="диплом магистра" width="50%">
         <h2>2014</br>Удостоверение о повышении квалификации</br>«Расчеты токов КЗ и уставок релейной защиты в электроэнергетических системах»</h2>
+        <img src="2014.jpg" alt="диплом магистра" width="50%">
         <h2>2021</br>Диплом о профессиональной переподготовке</br>«Специалист по тестированию в области информационных технологий» (06.004)</h2></br></br>
-
+        <img src="2021.jpg" alt="диплом магистра" width="50%">
         <h2>2015</br>Сертификат об обучении корейскому языку, начальный этап</h2>
-            
+        <img src="2015kr.jpg" alt="диплом магистра" width="50%">  
     </body>
 
     <footer id="copyright">&#169 А.Д. Махт, 2022</footer> 
