--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="author" content="Alina">
         <meta name="description" content="Sertificates and diplomas">
         <title>Сертификаты и дипломы</title>
-        <!-- <link rel = "stylesheet" href = "styles.css"> -->
+        <link rel = "stylesheet" href = "styles.css">
         
     </head>
 
@@ -22,8 +22,8 @@
         <img src="2013.jpg" alt="диплом магистра" width="50%">
         <h2>2014</br>Удостоверение о повышении квалификации</br>«Расчеты токов КЗ и уставок релейной защиты в электроэнергетических системах»</h2>
         <img src="2014.jpg" alt="диплом магистра" width="50%">
-        <h2>2021</br>Диплом о профессиональной переподготовке</br>«Специалист по тестированию в области информационных технологий» (06.004)</h2></br></br>
-        <img src="2021.jpg" alt="диплом магистра" width="50%">
+        <h2>2021</br>Диплом о профессиональной переподготовке</br>«Специалист по тестированию в области информационных технологий» (06.004)</h2>
+        <img src="2021.jpg" alt="диплом магистра" width="50%"></br></br>
         <h2>2015</br>Сертификат об обучении корейскому языку, начальный этап</h2>
         <img src="2015kr.jpg" alt="диплом магистра" width="50%">  
     </body>
